# Hardware1

./: .gitignore  Barberia.c  CMakeLists.txt  WaitingQueue.h  compile.sh  readingData.h  readme.md
.ccls-cache/@@home@runner@Tarea-Hardware-1/: @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@std_abs.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@cstdlib.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ctime.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@stdlib.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@c++config.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@cpu_defines.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@os_defines.h.blob  @nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@alloca.h.blob  @nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@byteswap.h.blob  @nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@confname.h.blob  @nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@cpu-set.h.blob  (+71 more)
data/: file0.txt
include/: Barbershop.h  BarbershopInfo.h  readingData.h
src/: Barbershop.c  BarbershopInfo.c  TestMain.c  main.c  readingData.c
(+25 files in other folders)
